made sidebar scroll with page, fixed whitespace in header

--- a/src/Browse/Browse.css
+++ b/src/Browse/Browse.css
@@ -1,3 +1,7 @@
+.Browse {
+  margin-left: 5%;
+}
+
 .Browse h2 {
   text-align: left;
   font-size: 24px;
